# Packet-Coders-Demo

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
clab/: ai.clab.yml
clab/configs/: r1.cfg  r2.cfg  spine1.cfg
configs/: inventory.containerlab.example.yaml  inventory.eve-ng.example.yaml  inventory.mock.yaml
docs/: clients.md  configuration.md  ollama-lab-guide.html  podcast-deck.html  podcast-talk.md  real-lab.md  safety.md  topology.md  troubleshooting.md  webinar.md
examples/: mcp.json  mcpo.config.example.json
scripts/: lab.py  local_llm_smoke.py
src/packet_coders_mcp/: __init__.py  commands.py  drivers.py  inventory.py  lab.py  safety.py  server.py
tests/: test_drivers.py  test_lab.py  test_server.py
